# rust-osascript

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
objc/: osa.m
src/: lib.rs
