[package]
name = "osascript"
version = "0.3.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["applescript", "osascript", "javascript"]
description = "Provides simplified access to JavaScript via OSA on macOS."
homepage = "https://github.com/mitsuhiko/rust-osascript"
documentation = "https://docs.rs/osascript/"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
